fix some issues